+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.4.2a
===========================

*Release date: XX-XXX-2005*

Core and builtins
-----------------

- It is now safe to call PyGILState_Release() before
  PyEval_InitThreads() (note that if there is reason to believe there
  are multiple threads around you still must call PyEval_InitThreads()
  before using the Python API; this fix is for extension modules that
  have no way of knowing if Python is multi-threaded yet).

- Typing Ctrl-C whilst raw_input() was waiting in a build with threads
  disabled caused a crash.

- Bug #1165306: instancemethod_new allowed the creation of a method
  with im_class == im_self == NULL, which caused a crash when called.

Extension Modules
-----------------

- Bug #1194181: bz2.BZ2File didn't handle mode 'U' correctly.

- Bug #1166660: The readline module could segfault if hook functions
  were set in a different thread than that which called readline.

- weakref proxy has incorrect __nonzero__ behavior.  SF bug #1770766.

Library
-------

- Bug #1196315: fix weakref.WeakValueDictionary constructor.

- Bug #1213894: os.path.realpath didn't resolve symlinks that were the first
  component of the path.

- distutils.commands.register now encodes the data as UTF-8 before posting
  them to PyPI.

- Partial fixes for SF bugs #1163244 and #1175396: If a chunk read by
  ``codecs.StreamReader.readline()`` has a trailing "\r", read one more
  character even if the user has passed a size parameter to get a proper
  line ending. Remove the special handling of a "\r\n" that has been split
  between two lines.


What's New in Python 2.4.1 final?
=================================

*Release date: 30-MAR-2005*

Core and builtins
-----------------

- Move exception finalisation later in the shutdown process - this 
  fixes the crash seen in bug #1165761

Tests
-----
